@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@posteo.net>
-" Last Change: December 19, 2018
+" Last Change: January 31, 2019
 " Inspired By: Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -130,11 +130,11 @@ syntax keyword vifmOption contained aproposprg autochpos caseoptions cdpath cd
 		\ lsoptions lsview mediaprg milleroptions millerview mintimeoutlen number nu
 		\ numberwidth nuw previewprg quickview relativenumber rnu rulerformat ruf
 		\ runexec scrollbind scb scrolloff so sort sortgroups sortorder sortnumbers
-		\ shell sh shortmess shm showtabline stal sizefmt slowfs smartcase scs
-		\ statusline stl suggestoptions syncregs syscalls tabscope tabstop timefmt
-		\ timeoutlen title tm trash trashdir ts tuioptions to undolevels ul vicmd
-		\ viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu wildstyle wordchars wrap
-		\ wrapscan ws
+		\ shell sh shellflagcmd shcf shortmess shm showtabline stal sizefmt slowfs
+		\ smartcase scs statusline stl suggestoptions syncregs syscalls tabscope
+		\ tabstop timefmt timeoutlen title tm trash trashdir ts tuioptions to
+		\ undolevels ul vicmd viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu
+		\ wildstyle wordchars wrap wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos nocf nochaselinks nodotfiles
