@@ -96,7 +96,9 @@ const char *tags[] = {
 	"vifm-'scrolloff'",
 	"vifm-'scs'",
 	"vifm-'sh'",
+	"vifm-'shcf'",
 	"vifm-'shell'",
+	"vifm-'shellcmdflag'",
 	"vifm-'shm'",
 	"vifm-'shortmess'",
 	"vifm-'showtabline'",
